Added basic behavior for editing tree

--- a/src/main/resources/net/talaatharb/websitebuilder/ui/MainWindow.fxml
+++ b/src/main/resources/net/talaatharb/websitebuilder/ui/MainWindow.fxml
@@ -93,7 +93,7 @@
       <items>
         <AnchorPane>
                <children>
-                  <TreeView fx:id="websiteTree" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <TreeView fx:id="websiteTree" editable="true" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children></AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
           <content>
